# backend/api-gateway/setup.cfg
# Configuration for Goat Prediction Ultimate API Gateway package

[metadata]
# Package metadata
name = goat-prediction-api-gateway
version = 1.0.0
description = High-performance API Gateway for Goat Prediction Ultimate - Advanced Sports Betting AI Platform
long_description = file: README.md
long_description_content_type = text/markdown
author = Goat Prediction Team
author_email = dev@goat-prediction.com
maintainer = Goat Prediction Engineering
maintainer_email = engineering@goat-prediction.com
url = https://github.com/goat-prediction/ultimate
download_url = https://github.com/goat-prediction/ultimate/releases
project_urls =
    Documentation = https://docs.goat-prediction.com
    Source = https://github.com/goat-prediction/ultimate
    Tracker = https://github.com/goat-prediction/ultimate/issues
    Changelog = https://github.com/goat-prediction/ultimate/releases
    Roadmap = https://github.com/goat-prediction/ultimate/ROADMAP.md

# Classifiers for PyPI
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Framework :: FastAPI
    Environment :: Web Environment
    Natural Language :: English
    Typing :: Typed

# Keywords for search
keywords =
    sports-betting
    predictions
    machine-learning
    api-gateway
    fastapi
    high-performance
    real-time
    ai
    artificial-intelligence

# License
license = MIT
license_files = LICENSE

# Platforms
platforms =
    any

[options]
# Package discovery
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False

# Python requirements
python_requires = >=3.11,<3.13

# Install requires
install_requires =
    # Core dependencies
    fastapi>=0.104.1,<0.105.0
    uvicorn[standard]>=0.24.0,<0.25.0
    python-multipart>=0.0.6,<0.1.0
    pydantic>=2.5.0,<2.6.0
    pydantic-settings>=2.1.0,<2.2.0
    python-jose[cryptography]>=3.3.0,<3.4.0
    passlib[bcrypt]>=1.7.4,<1.8.0
    bcrypt>=4.0.1,<4.1.0
    cryptography>=41.0.7,<42.0.0

    # Database
    sqlalchemy>=2.0.23,<2.1.0
    asyncpg>=0.29.0,<0.30.0
    alembic>=1.13.1,<1.14.0
    psycopg2-binary>=2.9.9,<2.10.0
    sqlalchemy-utils>=0.41.1,<0.42.0

    # Redis
    redis>=5.0.1,<5.1.0
    hiredis>=2.2.3,<2.3.0

    # Caching
    cachetools>=5.3.2,<5.4.0

    # HTTP Client
    httpx>=0.25.2,<0.26.0
    aiohttp>=3.9.1,<3.10.0

    # Configuration
    python-dotenv>=1.0.0,<1.1.0
    dynaconf>=3.2.4,<3.3.0

    # Logging
    structlog>=23.2.0,<23.3.0
    python-json-logger>=2.0.7,<2.1.0

    # Monitoring & Metrics
    prometheus-client>=0.19.0,<0.20.0
    opentelemetry-api>=1.22.0,<1.23.0
    opentelemetry-sdk>=1.22.0,<1.23.0
    opentelemetry-instrumentation-fastapi>=0.42b0,<0.43.0

    # Security
    python-keycloak>=2.13.0,<2.14.0
    authlib>=1.2.1,<1.3.0
    itsdangerous>=2.1.2,<2.2.0

    # Validation
    email-validator>=2.1.0,<2.2.0
    phonenumbers>=8.13.27,<8.14.0

    # Utils
    python-dateutil>=2.8.2,<2.9.0
    pytz>=2023.3
    tzdata>=2023.3
    click>=8.1.7,<8.2.0
    rich>=13.7.0,<13.8.0
    pyyaml>=6.0.1,<6.1.0
    jinja2>=3.1.2,<3.2.0

    # API Documentation
    fastapi-openapi>=0.4.0,<0.5.0
    openapi-schema-pydantic>=1.2.4,<1.3.0

    # Rate Limiting
    slowapi>=0.1.8,<0.2.0
    limits>=3.7.0,<3.8.0

    # Health Checks
    healthchecks-api>=0.1.0,<0.2.0

    # Compression
    brotli>=1.1.0,<1.2.0
    gzip-stream>=1.0.0,<1.1.0

    # Message Queue
    pika>=1.3.2,<1.4.0
    aio-pika>=9.4.1,<9.5.0

    # WebSockets
    websockets>=12.0,<13.0
    starlette>=0.36.3,<0.37.0

    # File Upload
    python-magic>=0.4.27,<0.5.0
    filetype>=1.2.0,<1.3.0

    # Data Serialization
    orjson>=3.9.10,<3.10.0
    msgpack>=1.0.7,<1.1.0

    # Testing helpers
    pytest>=7.4.3,<7.5.0
    pytest-asyncio>=0.21.1,<0.22.0
    pytest-cov>=4.1.0,<4.2.0
    httpx-sse>=0.4.0,<0.5.0

# Extra dependencies
[options.extras_require]
# Development dependencies
dev =
    black>=23.11.0,<24.0.0
    isort>=5.12.0,<5.13.0
    flake8>=6.1.0,<6.2.0
    mypy>=1.7.0,<1.8.0
    pre-commit>=3.5.0,<3.6.0
    autoflake>=2.2.0,<2.3.0
    bandit>=1.7.5,<1.8.0
    safety>=2.3.5,<2.4.0
    pytest>=7.4.3,<7.5.0
    pytest-asyncio>=0.21.1,<0.22.0
    pytest-cov>=4.1.0,<4.2.0
    pytest-xdist>=3.5.0,<3.6.0
    pytest-mock>=3.12.0,<3.13.0
    pytest-html>=4.1.1,<4.2.0
    pytest-benchmark>=4.0.0,<4.1.0
    tox>=4.11.3,<4.12.0
    coverage>=7.3.2,<7.4.0
    ipdb>=0.13.13,<0.14.0
    ipython>=8.17.2,<8.18.0
    jupyter>=1.0.0,<1.1.0
    watchdog>=3.0.0,<3.1.0
    docker>=6.1.3,<6.2.0
    docker-compose>=1.29.2,<1.30.0

# Documentation dependencies
docs =
    mkdocs>=1.5.3,<1.6.0
    mkdocs-material>=9.5.3,<9.6.0
    mkdocstrings[python]>=0.24.0,<0.25.0
    mkdocs-autorefs>=0.5.1,<0.6.0
    mkdocs-jupyter>=0.24.1,<0.25.0
    pymdown-extensions>=10.5,<10.6
    mike>=1.1.2,<1.2.0
    markdown-include>=0.8.1,<0.9.0
    plantuml-markdown>=3.9.0,<3.10.0

# Testing dependencies
test =
    pytest>=7.4.3,<7.5.0
    pytest-asyncio>=0.21.1,<0.22.0
    pytest-cov>=4.1.0,<4.2.0
    pytest-xdist>=3.5.0,<3.6.0
    pytest-mock>=3.12.0,<3.13.0
    pytest-html>=4.1.1,<4.2.0
    pytest-benchmark>=4.0.0,<4.1.0
    factory-boy>=3.3.0,<3.4.0
    faker>=21.3.1,<21.4.0
    respx>=0.20.1,<0.21.0
    freezegun>=1.2.2,<1.3.0
    hypothesis>=6.92.0,<6.93.0
    testcontainers>=3.10.0,<3.11.0
    testcontainers-postgres>=0.2.0,<0.3.0
    testcontainers-redis>=0.2.0,<0.3.0

# Performance dependencies
performance =
    locust>=2.20.1,<2.21.0
    py-spy>=0.3.14,<0.4.0
    memory-profiler>=0.61.0,<0.62.0
    line-profiler>=4.0.3,<4.1.0
    scalene>=1.5.29,<1.6.0
    pyinstrument>=4.6.2,<4.7.0
    snakeviz>=2.2.0,<2.3.0

# Security dependencies
security =
    bandit>=1.7.5,<1.8.0
    safety>=2.3.5,<2.4.0
    semgrep>=1.43.0,<1.44.0
    trufflehog>=3.63.4,<3.64.0
    detect-secrets>=1.4.0,<1.5.0
    python-audit>=1.0.0,<1.1.0

# Monitoring dependencies
monitoring =
    prometheus-client>=0.19.0,<0.20.0
    grafana-dashboard>=0.1.0,<0.2.0
    sentry-sdk>=1.39.1,<1.40.0
    datadog>=0.48.0,<0.49.0
    newrelic>=8.10.0,<8.11.0
    elastic-apm>=6.21.0,<6.22.0

# All dependencies (dev + test + docs + performance + security + monitoring)
all =
    black>=23.11.0,<24.0.0
    isort>=5.12.0,<5.13.0
    flake8>=6.1.0,<6.2.0
    mypy>=1.7.0,<1.8.0
    pre-commit>=3.5.0,<3.6.0
    autoflake>=2.2.0,<2.3.0
    bandit>=1.7.5,<1.8.0
    safety>=2.3.5,<2.4.0
    pytest>=7.4.3,<7.5.0
    pytest-asyncio>=0.21.1,<0.22.0
    pytest-cov>=4.1.0,<4.2.0
    pytest-xdist>=3.5.0,<3.6.0
    pytest-mock>=3.12.0,<3.13.0
    pytest-html>=4.1.1,<4.2.0
    pytest-benchmark>=4.0.0,<4.1.0
    tox>=4.11.3,<4.12.0
    coverage>=7.3.2,<7.4.0
    ipdb>=0.13.13,<0.14.0
    ipython>=8.17.2,<8.18.0
    jupyter>=1.0.0,<1.1.0
    watchdog>=3.0.0,<3.1.0
    docker>=6.1.3,<6.2.0
    docker-compose>=1.29.2,<1.30.0
    mkdocs>=1.5.3,<1.6.0
    mkdocs-material>=9.5.3,<9.6.0
    mkdocstrings[python]>=0.24.0,<0.25.0
    mkdocs-autorefs>=0.5.1,<0.6.0
    mkdocs-jupyter>=0.24.1,<0.25.0
    pymdown-extensions>=10.5,<10.6
    mike>=1.1.2,<1.2.0
    markdown-include>=0.8.1,<0.9.0
    plantuml-markdown>=3.9.0,<3.10.0
    factory-boy>=3.3.0,<3.4.0
    faker>=21.3.1,<21.4.0
    respx>=0.20.1,<0.21.0
    freezegun>=1.2.2,<1.3.0
    hypothesis>=6.92.0,<6.93.0
    testcontainers>=3.10.0,<3.11.0
    testcontainers-postgres>=0.2.0,<0.3.0
    testcontainers-redis>=0.2.0,<0.3.0
    locust>=2.20.1,<2.21.0
    py-spy>=0.3.14,<0.4.0
    memory-profiler>=0.61.0,<0.62.0
    line-profiler>=4.0.3,<4.1.0
    scalene>=1.5.29,<1.6.0
    pyinstrument>=4.6.2,<4.7.0
    snakeviz>=2.2.0,<2.3.0
    semgrep>=1.43.0,<1.44.0
    trufflehog>=3.63.4,<3.64.0
    detect-secrets>=1.4.0,<1.5.0
    python-audit>=1.0.0,<1.1.0
    prometheus-client>=0.19.0,<0.20.0
    grafana-dashboard>=0.1.0,<0.2.0
    sentry-sdk>=1.39.1,<1.40.0
    datadog>=0.48.0,<0.49.0
    newrelic>=8.10.0,<8.11.0
    elastic-apm>=6.21.0,<6.22.0

# Entry points
[options.entry_points]
# Console scripts
console_scripts =
    goat-api = src.main:main
    goat-api-dev = src.main:dev
    goat-api-prod = src.main:prod
    goat-api-test = src.main:test
    goat-api-migrate = src.cli.migrations:migrate
    goat-api-seed = src.cli.seed:seed
    goat-api-health = src.cli.health:health
    goat-api-monitor = src.cli.monitor:monitor
    goat-api-backup = src.cli.backup:backup

# FastAPI apps
fastapi.apps =
    api_gateway = src.app:app

# Plugins
goat_prediction.plugins =
    auth = src.plugins.auth:AuthPlugin
    monitoring = src.plugins.monitoring:MonitoringPlugin
    rate_limiting = src.plugins.rate_limiting:RateLimitingPlugin
    caching = src.plugins.caching:CachingPlugin

[options.package_data]
# Include package data
* =
    py.typed
    *.pyi
    *.json
    *.yaml
    *.yml
    *.env
    *.ini
    *.cfg
    README.md
    LICENSE
    CHANGELOG.md

# Include specific package data
goat_prediction_api_gateway =
    config/*.yaml
    config/*.yml
    config/*.json
    schemas/*.json
    templates/*.html
    templates/*.jinja2
    static/*.css
    static/*.js
    static/*.png
    static/*.svg
    migrations/*.sql
    migrations/*.py
    tests/*.py
    tests/*.json
    fixtures/*.json
    fixtures/*.yaml

[options.data_files]
# Data files to install
share/goat-prediction/api-gateway/config =
    config/*.yaml
    config/*.yml
    config/*.json
    config/*.env.example

share/goat-prediction/api-gateway/schemas =
    schemas/*.json
    schemas/*.graphql

share/goat-prediction/api-gateway/templates =
    templates/*.html
    templates/*.jinja2

share/goat-prediction/api-gateway/static =
    static/*.css
    static/*.js
    static/*.png
    static/*.svg

share/goat-prediction/api-gateway/migrations =
    migrations/*.sql
    migrations/*.py
    alembic.ini
    alembic/*.py

# Configuration for tools
[tool:setuptools.dist]
# Use setuptools_scm for versioning
use_scm_version = true
setup_requires =
    setuptools_scm>=7.1.0,<7.2.0

# Test configuration
[tool:pytest]
# Pytest configuration
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --strict-config
    --disable-warnings
    --tb=short
    --color=yes
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --junitxml=test-results/junit.xml
    --html=test-results/report.html
    --self-contained-html
markers =
    unit: Unit tests
    integration: Integration tests
    e2e: End-to-end tests
    performance: Performance tests
    security: Security tests
    slow: Slow running tests
    fast: Fast running tests
    async: Async tests
    database: Database tests
    api: API tests
    auth: Authentication tests
    redis: Redis tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::RuntimeWarning
    ignore::UserWarning

# Mypy configuration
[tool:mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disallow_any_generics = true
warn_unused_configs = true
plugins =
    pydantic.mypy
    sqlalchemy.ext.mypy
exclude =
    ^\.venv/
    ^\.env/
    ^\.git/
    ^\.hg/
    ^\.mypy_cache/
    ^build/
    ^dist/
    ^node_modules/
    ^\.pytest_cache/
    ^\.tox/
    ^test-results/
    ^\.coverage
    ^coverage\.xml
    ^htmlcov/
    ^\.benchmarks/

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "alembic",
    "redis",
    "httpx",
    "aiohttp",
]

# Flake8 configuration
[tool.flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    W503,  # line break before binary operator
    E501,  # line too long (handled by black)
exclude = 
    .git,
    __pycache__,
    .env,
    .venv,
    env,
    venv,
    build,
    dist,
    .tox,
    .mypy_cache,
    .pytest_cache,
    node_modules,
    migrations,
    alembic,
per-file-ignores = 
    __init__.py: F401
    tests/*: S101

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "setup.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html"
title = "Goat Prediction API Gateway Coverage"

# Pydantic configuration
[tool.pydantic-config]
extra = "forbid"
arbitrary_types_allowed = true
validate_assignment = true
error_msg_templates = true

# SQLAlchemy configuration
[tool.sqlalchemy]
echo = false
future = true

# FastAPI configuration
[tool.fastapi]
title = "Goat Prediction API Gateway"
version = "1.0.0"
description = "High-performance API Gateway for Goat Prediction Ultimate"
contact = 
    name = "Goat Prediction Team"
    email = "dev@goat-prediction.com"
license = 
    name = "MIT"
    url = "https://opensource.org/licenses/MIT"
servers = 
    {url = "http://localhost:8000", description = "Development server"}
    {url = "https://api.goat-prediction.com", description = "Production server"}

# OpenAPI configuration
[tool.openapi]
generate = true
output = "openapi.json"
format = "json"
validate = true

# Security configuration
[tool.security]
jwt_secret_key = "${JWT_SECRET_KEY}"
jwt_algorithm = "HS256"
jwt_access_token_expire_minutes = 30
jwt_refresh_token_expire_days = 7
bcrypt_rounds = 12
rate_limit_requests = 100
rate_limit_period = 60
cors_origins = ["*"]
cors_methods = ["*"]
cors_headers = ["*"]
cors_credentials = true

# Redis configuration
[tool.redis]
host = "localhost"
port = 6379
db = 0
password = "${REDIS_PASSWORD}"
ssl = false
ssl_cert_reqs = "required"
connection_pool = 
    max_connections = 100
    timeout = 10
    retry_on_timeout = true

# Database configuration
[tool.database]
url = "postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
pool_size = 20
max_overflow = 10
pool_recycle = 3600
pool_timeout = 30
pool_pre_ping = true
echo = false

# Logging configuration
[tool.logging]
version = 1
disable_existing_loggers = false

[loggers]
keys = root, goat_prediction, sqlalchemy, uvicorn

[handlers]
keys = console, file, json

[formatters]
keys = simple, json, verbose

[logger_root]
level = INFO
handlers = console, file
qualname = root

[logger_goat_prediction]
level = INFO
handlers = console, file, json
qualname = goat_prediction
propagate = 0

[logger_sqlalchemy]
level = WARNING
handlers = file
qualname = sqlalchemy.engine
propagate = 0

[logger_uvicorn]
level = INFO
handlers = console
qualname = uvicorn
propagate = 0

[handler_console]
class = logging.StreamHandler
level = INFO
formatter = simple
args = (sys.stdout,)

[handler_file]
class = logging.handlers.RotatingFileHandler
level = INFO
formatter = verbose
args = ("logs/api-gateway.log", "a", 10485760, 10)

[handler_json]
class = logging.StreamHandler
level = INFO
formatter = json
args = (sys.stdout,)

[formatter_simple]
format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[formatter_verbose]
format = "%(asctime)s - %(name)s - %(levelname)s - %(pathname)s:%(lineno)d - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[formatter_json]
format = "%(message)s"
class = structlog.stdlib.ProcessorFormatter

# Monitoring configuration
[tool.monitoring]
enabled = true
metrics_port = 9090
metrics_path = "/metrics"
health_check_path = "/health"
ready_check_path = "/ready"
live_check_path = "/live"
tracing_enabled = true
tracing_sample_rate = 0.1
profiling_enabled = false
profiling_port = 6060

# Rate limiting configuration
[tool.rate_limiting]
enabled = true
storage_uri = "redis://localhost:6379/1"
strategy = "fixed-window"
default = ["100 per minute"]
by_ip = ["10 per second"]
by_user = ["1000 per hour"]
exempt_routes = ["/health", "/metrics", "/docs", "/redoc", "/openapi.json"]

# Caching configuration
[tool.caching]
enabled = true
backend = "redis"
redis_url = "redis://localhost:6379/2"
default_ttl = 300
key_prefix = "goat_api:"
compression = true
compression_level = 6

# API Gateway specific configuration
[tool.api_gateway]
name = "goat-prediction-api-gateway"
version = "1.0.0"
environment = "${ENVIRONMENT:development}"
debug = "${DEBUG:false}"
host = "0.0.0.0"
port = 8000
reload = "${RELOAD:false}"
workers = "${WORKERS:4}"
timeout = 120
keepalive = 5
max_requests = 1000
max_requests_jitter = 50
backlog = 2048
limit_concurrency = 1000
limit_max_requests = 10000
graceful_timeout = 30

# Load balancer configuration
[tool.load_balancer]
strategy = "round-robin"
health_check_interval = 30
health_check_timeout = 5
health_check_failures = 3
health_check_successes = 2

# Service discovery
[tool.service_discovery]
enabled = true
backend = "consul"
consul_host = "localhost"
consul_port = 8500
service_name = "api-gateway"
service_tags = ["api", "gateway", "goat-prediction"]
service_check_interval = "10s"
service_check_timeout = "5s"

# Circuit breaker configuration
[tool.circuit_breaker]
enabled = true
failure_threshold = 5
recovery_timeout = 60
expected_exceptions = []
half_open_max_calls = 1

# Retry configuration
[tool.retry]
enabled = true
max_attempts = 3
delay = 1
backoff = 2
max_delay = 10
jitter = true

# Compression configuration
[tool.compression]
enabled = true
min_size = 1024
algorithm = "gzip"
level = 6
content_types = ["text/html", "text/css", "text/plain", "text/xml", "text/javascript", "application/json", "application/javascript", "application/xml"]

# Build configuration
[tool.build]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Wheel configuration
[tool.wheel]
universal = false

# Bdist configuration
[tool.bdist]
universal = false

# Sdist configuration
[tool.sdist]
formats = gztar

# Package index configuration
[tool.package_index]
repository = https://pypi.org/
username = __token__
password = ${PYPI_TOKEN}

# This is the end of setup.cfg configuration
# Goat Prediction Ultimate API Gateway
# Version: 1.0.0
# Generated: 2026-01-24
